[package]
name = "rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.17"
num-integer = "0.1.45"
modpow = "1.0.1"
rand = "0.8.5"
bus = "2.4.1"
num_cpus = "1.16.0"
